PDF: Selection Invalidation should compensate for rounding errors.

BUG=619529

Review-Url: https://codereview.chromium.org/2959813003
Cr-Commit-Position: refs/heads/master@{#482632}

Former-commit-id: f652da6b125870c2a940d90c1c30ebcc82379512